This fixes 3 bugs:   Chrome not showing timestamps properly on     Collections => Users => <click on some user> => contents
  Padding on the massive collections tables
  Ggravatars on collections tables

--- a/portal/css/usergrid.less
+++ b/portal/css/usergrid.less
@@ -467,7 +467,6 @@ a:active {
 	padding: 0px;
 	margin: 0px;
 }
-
 .query-result-portlet-title {
 	font-size: 12px;
 	font-weight: bold;
@@ -482,11 +481,11 @@ a:active {
 }
 
 .query-result-portlet td {
-	//border: 1px solid #ccc;
+  padding: 10px;
 }
 
 .query-result-portlet td>div {
-	padding: 4px 4px;
+	padding: 0px;
 }
 
 .query-result-header {
@@ -513,6 +512,9 @@ a:active {
 .query-result-table-obj {
     tr {
         .zebraRows;
+        td {
+          line-height: 18px !important;
+        } 
     }
     .query-result-table-obj {
         tr {
@@ -545,13 +547,13 @@ a:active {
 }
 
 .query-result-td-header-buttons {
-    float: right;
+  float: right;
 	vertical-align: middle;
 	text-align: right;
 	padding: 4px 8px;
 	button {
     	font-size: 12px;
-    	margin: 0px 0px 0px 8px;
+    	margin: 0px 0px 0px 0px;
     }
     a {
     	font-size: 12px;
@@ -564,8 +566,9 @@ a:active {
 	padding-left: 8px;
 	font-size: 13px;
 }
-.query-result-table-name{
+.query-result-table-name, .query-result-table-value {
     width: 25%;
+    padding: 10px !important;
 }
 
 /*-------------------------------------------------*/
